hphp/test/slow/unstable_features/enables_selected_feature.php.expectf
Fatal error: Cannot use unstable feature: `union_intersection_type_hints` in %s on line 14
